# mercado

./: .gitignore  Makefile  README.md  checkpoints.py  pyproject.toml  requirements.txt
mercado_bitcoin/: apis.py  ingestors.py  main.py  writer.py
tests/: test_apis.py  test_ingetors.py  test_integration.py
