[tool.poetry]
name = "mercado_bitcoin_lambda"
version = "0.1.0"
description = ""
authors = ["Emme <menezes.ecd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
ratelimit = "^2.2.1"
backoff = "^1.11.1"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
